--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_storage: ^12.1.0
   firebase_auth: ^5.1.1
   fluttertoast: ^8.2.6
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
